Update .env.example to add perplexity key

--- a/config/.env.example
+++ b/config/.env.example
@@ -12,3 +12,6 @@
 
 # Grok API Key (required for Grok provider)
 # GROK_API_KEY=your_grok_key_here
+
+# Perplexity API Key (required for Perplexity provider)
+PERPLEXITY_API_KEY=your_perplexity_key_here
